<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jacek.hondadiagnostic.How_to_kody">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:padding="15dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/how_to_1"
                android:textColor="#000000"
                android:textSize="22dp"
                android:textStyle="bold" />
            android:layout_alignParentTop="true"

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:layout_weight="2"
                android:paddingLeft="5dp"
                android:text="@string/how_to_2"
                android:textColor="#333"
                android:textSize="15dp"


                />

            <ImageView
                android:id="@+id/wtyczka_diagnostyczna"

                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_below="@+id/textView2"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_weight="0.11"
                app:srcCompat="@drawable/wtyczka_diagnostyczna" />
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/wtyczka_diagnostyczna"
                android:layout_weight="2"
                android:paddingLeft="5dp"
                android:text="@string/how_to_3"
                android:textColor="#333"
                android:textSize="15dp"


                />
        </RelativeLayout>
    </ScrollView>

</LinearLayout>
