<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jacek.hondadiagnostic.Zaklady.Backyard">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Base.ThemeOverlay.AppCompat.ActionBar"
        android:fitsSystemWindows ="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleTextAppearance="@color/colorTransparentWhite"
            android:fitsSystemWindows="true">

            <ImageView
                app:layout_collapseMode="parallax"
                android:src="@drawable/backyard"
                android:contentDescription="@string/app_name"
                android:scaleType="center"
                android:layout_width="match_parent"
                android:layout_height="350dp" />

            <!--<android.support.v7.widget.Toolbar-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="?attr/actionBarSize"-->
                <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light"-->
                <!--app:title="@string/tytuł"-->
                <!--app:titleTextColor="@color/white"-->
                <!--app:layout_collapseMode="pin"-->
                <!--/>-->
            
        </android.support.design.widget.CollapsingToolbarLayout>
        
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tytuł_backyard"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:layout_marginTop="12dp"
                    android:textSize="20sp"
                    android:padding="12dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <ImageView
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_clock"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="9"
                        android:padding="12dp"
                        android:textSize="14sp"
                        android:layout_gravity="center_vertical"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/godziny_pracy_backyard"
                       />


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp">
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_location" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="9"
                        android:padding="12dp"
                        android:textSize="14sp"
                        android:layout_gravity="center_vertical"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/miejsce_backyard"
                        />

                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="1.5"
                    android:layout_marginTop="12dp"
                    android:text="Twój tekst \n Twój tekst \n Twój tekst \n Twój tekst \n Twój tekst \n Twój tekst \n Twój tekst \n Twój tekst"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:src="@drawable/facebook"
        app:backgroundTint="@color/fb"
        app:elevation="6dp"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|right|end"
        app:pressedTranslationZ="12dp" />
</android.support.design.widget.CoordinatorLayout>
