<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_main"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context="com.example.jacek.hondadiagnostic.Menu_glowne">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:background="#00000000"
        android:paddingTop="5dp">

        <android.support.v7.widget.CardView
            style="@style/Base.CardView"
            android:layout_width="170dp"
            android:layout_height="200dp"
            android:layout_marginRight="5dp"
            android:paddingBottom="2dp"

            app:cardElevation="0dp"
            app:cardPreventCornerOverlap="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="5dp">

                <ImageView
                    android:id="@+id/Dziennik_napraw"
                    android:layout_width="99dp"
                    android:layout_height="160dp"
                    android:background="@drawable/logo_ksiazka"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="#00000000"
                    android:text="@string/service_book"
                    android:textStyle="bold" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView

            android:layout_width="170dp"
            android:layout_height="200dp"
            android:layout_marginLeft="5dp"
            app:cardElevation="0dp"
            android:clickable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:gravity="center"

                android:orientation="vertical">

                <ImageView
                    android:id="@+id/tips"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:background="@drawable/brain"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="#00000000"
                    android:text="@string/poradniki"
                    android:textStyle="bold" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <android.support.v7.widget.CardView
            android:layout_width="170dp"
            android:layout_height="200dp"
            android:layout_marginRight="5dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/serwisy"
                    android:layout_width="128dp"
                    android:layout_height="160dp"
                    android:background="@drawable/logo_mechanik"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="#00000000"
                    android:text="@string/polecane_zakłady"
                    android:textStyle="bold" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="170dp"
            android:layout_height="200dp"
            android:layout_marginLeft="5dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:gravity="center"

                android:orientation="vertical">

                <ImageView
                    android:id="@+id/checkEngine"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:background="@drawable/check_engine_zolty_menu"
                    android:padding="10dp" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="#00000000"
                    android:text="@string/kody_bledow"
                    android:textStyle="bold" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00000000">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/R_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"

            android:layout_marginStart="16dp"

            android:layout_marginTop="16dp"
            app:backgroundTint="@color/fab_r"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/r_button" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/eco_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"

            android:layout_marginStart="16dp"

            android:layout_marginTop="16dp"
            app:backgroundTint="@color/fab_eco"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/eco_button" />
    </android.support.constraint.ConstraintLayout>


    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:orientation="vertical"-->
    <!--android:gravity="center">-->
    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:gravity="center">-->
    <!--<ImageView-->
    <!--android:id="@+id/checkEngine"-->
    <!--android:layout_width="330dp"-->
    <!--android:layout_height="100dp"-->
    <!--android:scaleType="fitCenter"-->

    <!--app:srcCompat="@drawable/check_engine" />-->
    <!--</LinearLayout>-->
    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:gravity="center">-->
    <!--<ImageView-->
    <!--android:id="@+id/Response"-->
    <!--android:layout_width="330dp"-->
    <!--android:layout_height="100dp"-->
    <!--android:scaleType="centerCrop"-->
    <!--app:srcCompat="@drawable/b" />-->
    <!--</LinearLayout>-->

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:gravity="center">-->
    <!--<ImageView-->
    <!--android:id="@+id/Dziennik_napraw"-->
    <!--android:layout_width="330dp"-->
    <!--android:layout_height="100dp"-->
    <!--android:scaleType="centerCrop"-->
    <!--app:srcCompat="@drawable/b" />-->
    <!--</LinearLayout>-->

    <!--<Button-->
    <!--android:id="@+id/tips"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="Button" />-->

    <!--</LinearLayout>-->


</LinearLayout>